--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TypeScript no 理解</title>
-    <script src="app.js"></script>
+    <script src="./dist/app.js"></script>
+    <script src="./dist/analytics.js"></script>
 </head>
 
-<body></body>
+<body>
+    <button>Click me</button>
+
+</body>
 
 </html>
